--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
+  <script type="module" src="../src/server.js"></script>
 </head>
 <body>
+  <h1>Testing</h1>
 
   <svg id="barGraph" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
-  
+
   <svg id="lineGraph" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
   
 </body>
