--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="styles.css">
-  <script type="module" src="../src/server.js"></script>
+  <link rel="stylesheet" href="/public/styles.css">
+  <script type="module" src="../public/diagram.js"></script>
 </head>
+
 <body>
-  <h1>Testing</h1>
+  <main>
+    <h1>Testing</h1>
+  </main>
 
-  <svg id="barGraph" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
-
-  <svg id="lineGraph" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
-  
+  <div class="mainPage">
+    <div class="diagram">
+      <h2>Bar Graph</h2>
+      <svg id="barGraph" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>  
+    </div>
+  </div>
 </body>
 </html>
