--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/public/styles.css">
-  <script type="module" src="../public/diagram.js"></script>
+  <link rel="stylesheet" href="/styles.css">
+  <script type="module" src="/diagram.js"></script>
 </head>
 
 <body>
