Successfully takes data from service into frontend

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,10 @@
         <!-- Make into options: Bar or Line -->
         <input type="text">
       </div>
+
+      <div id="generateBtn">
+        <button class="btn">Generate Diagram</button>
+      </div>
     </div>
     <div class="diagram">
       <h2>Bar Graph</h2>
