--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,9 @@
     </div>
     <div class="diagram">
       <h2>Bar Graph</h2>
+      <h3>Today</h3>
       <svg id="day1" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
+      <h3>Tomorrow</h3>
       <svg id="day2" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
       <svg id="day3" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
       <svg id="day4" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
