--- a/public/index.html
+++ b/public/index.html
@@ -25,26 +25,11 @@
         <input type="text">
       </div>
 
-      <div id="diagramInput">
-        <label for="diagram">Diagram:</label>
-        <!-- Make into options: Bar or Line -->
-        <input type="text">
-      </div>
-
       <div id="generateBtn">
         <button class="btn">Generate Diagram</button>
       </div>
     </div>
-    <div id="diagram-container">
-      <!-- <h2>Bar Graph</h2>
-      <h3>Today</h3>
-      <svg id="day1" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
-      <h3>Tomorrow</h3>
-      <svg id="day2" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
-      <svg id="day3" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
-      <svg id="day4" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg>
-      <svg id="day5" width="450" height="300" xmlns="http://www.w3.org/2000/svg" style="border: 2px, solid;"></svg> -->
-    </div>
+    <div id="diagram-container"></div>
   </div>
 </body>
 
