Refactored creation of diagrams

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,8 @@
 <body>
   <main>
     <h1>Weather Forecast in Diagrams</h1>
-    <div class="navigationButtons">
-      <button>Temperature</button>
-      <button>Humidity</button>
-    </div>
+    <p>Use this app to see weather information in diagrams! </p>
+    <p>Can you see any correlation between humidity and wind speed?</p>
   </main>
 
   <div class="mainPage">
@@ -24,9 +22,7 @@
         <label for="city">City:</label>
         <input id="city-input" type="text" placeholder="Enter city">
       </div>
-      <div id="generateBtn">
-        <button id="generateBtn">Generate Diagram</button>
-      </div>
+      <button id="generateBtn">Generate Diagram</button>
     </div>
     <section id="diagram-container">
       <div id="humidity-container">
