Data for date, humidity and wind are visible

--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,7 @@
       </div>
       <button id="generateBtn">Generate Diagram</button>
     </div>
-    <section id="diagram-container">
-      <div id="humidity-container">
-        <h2>Humidity</h2>
-      </div>
-      <div id="windSpeed-container">
-        <h2>Wind Speed</h2>
-      </div>
-    </section>
+    <section id="diagram-container"></section>
   </div>
 </body>
 
