New layout and refactored

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,6 @@
   <main>
     <h1>Weather Forecast in Diagrams</h1>
     <p>Use this app to see weather information in diagrams! </p>
-    <p>Can you see any correlation between humidity and wind speed?</p>
   </main>
 
   <div class="mainPage">
@@ -23,6 +22,7 @@
         <input id="city-input" type="text" placeholder="Enter city">
       </div>
       <button id="generateBtn">Generate Diagram</button>
+      <div id="generateBtnText"></div>
     </div>
     <section id="diagram-container"></section>
   </div>
